cambio en lineas csv

--- a/ventapp/templates/fanDesign.html
+++ b/ventapp/templates/fanDesign.html
@@ -114,11 +114,13 @@
    <script type="text/javascript">
       
       const dataV = {{ scatter_data|safe }};
+      const promedios = {{ promedios }};
+      console.log(promedios);
       // Call the function initially
       document.addEventListener("DOMContentLoaded",
          function() {
             if ("{{ chart_type }}" == "total_pressure"){
-               createFanChart(dataV, 'total_pressure');
+               createFanChart(dataV, 'total_pressure', promedios);
             } else if ("{{ chart_type }}" == "static_pressure"){
                createFanChart(dataV, 'static_pressure');
             } else if ("{{ chart_type }}" == "power"){
