--- a/ventapp/templates/fanDesign.html
+++ b/ventapp/templates/fanDesign.html
@@ -122,9 +122,9 @@
             if ("{{ chart_type }}" == "total_pressure"){
                createFanChart(dataV, 'total_pressure', promedios);
             } else if ("{{ chart_type }}" == "static_pressure"){
-               createFanChart(dataV, 'static_pressure');
+               createFanChart(dataV, 'static_pressure', promedios);
             } else if ("{{ chart_type }}" == "power"){
-               createFanChart(dataV, 'power');
+               createFanChart(dataV, 'power', promedios);
             }
          });
       // Call the function on window resize
