--- a/ventapp/static/css/app.css
+++ b/ventapp/static/css/app.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   flex-direction: column;
 
-  background-color: rgba(1, 99, 114, 0.6);
+  /* background-color: rgba(1, 99, 114, 0.6); */
 }
 body > main.container {
   flex: 1 0 auto;
