Current Status PlusQ 3 variables

--- a/ventapp/templates/base.html
+++ b/ventapp/templates/base.html
@@ -37,6 +37,8 @@
 
   {% block head_js %}{% endblock head_js %}
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <title>{% block head_title %}{% endblock %} | VentApp</title>
 </head>
 <body>
