--- a/ventapp/templates/widgets/base_navbar.html
+++ b/ventapp/templates/widgets/base_navbar.html
@@ -25,7 +25,9 @@
             <a class="btn btn-outline-secondary" href="{% url 'fandesign:fandesign' %}?chart_type=total_pressure" role="button">Fan design curve</a>
             <a class="btn btn-outline-secondary" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a>
             <a class="btn btn-outline-secondary" href="{% url 'currentstatus:currentstatus' %}" role="button">Current Status</a>
-            <a class="btn btn-outline-secondary" role="button">Settings</a>
+            <a class="btn btn-outline-secondary" href="{% url 'settings:settings' %}" role="button">Settings</a>
+            <a class="btn btn-outline-secondary" href="{% url 'newproject:newproject' %}" role="button">New Project</a>
+
         </li>
         {% comment %}
         {# Basic topbar nav elements, as copied from Bootstrap documentation #}
