--- a/ventapp/templates/getdata.html
+++ b/ventapp/templates/getdata.html
@@ -29,6 +29,25 @@
                     {{ table_html|safe }}
                 {% endif %}
             </div>
+
+            <div class="w-25">
+                <br></br>
+            </div>
+
+            <div class="w-25">
+                <h1>Leer datos .csv</h1>
+                
+                <!-- Agrega un formulario para enviar la solicitud POST -->
+                <form method="post">
+                    {% csrf_token %}
+                    <button type="submit" class="btn btn-primary">Leer CSV</button>
+                </form>
+                
+                <!-- Muestra la tabla HTML generada por pandas -->
+                {% if table_html %}
+                    {{ table_html|safe }}
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
