--- a/ventapp/templates/widgets/base_navbar.html
+++ b/ventapp/templates/widgets/base_navbar.html
@@ -26,7 +26,7 @@
             <a class="btn btn-outline-secondary" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a>
             <a class="btn btn-outline-secondary" href="{% url 'currentstatus:currentstatus' %}" role="button">Current Status</a>
             <a class="btn btn-outline-secondary" href="{% url 'settings:settings' %}" role="button">Settings</a>
-            <a class="btn btn-outline-secondary" href="{% url 'newproject:newproject' %}" role="button">New Project</a>
+            {% comment %} <a class="btn btn-outline-secondary" href="{% url 'newproject:newproject' %}" role="button">New Project</a> {% endcomment %}
 
         </li>
         {% comment %}
