--- a/ventapp/templates/widgets/base_navbar.html
+++ b/ventapp/templates/widgets/base_navbar.html
@@ -23,7 +23,7 @@
         <li class="nav-item">
             <a class="btn btn-outline-secondary" href="{% url 'getdata:getdata' %}" role="button">System Input</a>
             <a class="btn btn-outline-secondary" href="{% url 'fandesign:fandesign' %}?chart_type=total_pressure" role="button">Fan design curve</a>
-            <a class="btn btn-outline-secondary" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a>
+            {% comment %} <a class="btn btn-outline-secondary" href="{% url 'fanreal:fanreal' %}?section=current_Operation">Fan real curve</a> {% endcomment %}
             <a class="btn btn-outline-secondary" href="{% url 'currentstatus:currentstatus' %}" role="button">Current Status</a>
             <a class="btn btn-outline-secondary" href="{% url 'settings:settings' %}" role="button">Settings</a>
             {% comment %} <a class="btn btn-outline-secondary" href="{% url 'newproject:newproject' %}" role="button">New Project</a> {% endcomment %}
