Inputs, Navegacion y Models restantes

--- a/ventapp/templates/widgets/dbs/ducto.html
+++ b/ventapp/templates/widgets/dbs/ducto.html
@@ -1,3 +1,4 @@
+{% load django_bootstrap5 %}
    <div class="row">
       <div class="col">
          <a href="?type=ventilador" class="btn btn-outline-secondary">+ Ventilador</a>
@@ -9,6 +10,13 @@
 
    <div class="row h-100">
       <div class="col m-4">
-         <div class="h-100" id="graphContainer" ></div>
+         <div class="h-100" >
+            <h2>Nuevo Ducto</h2>
+            <form method="POST">
+               {% csrf_token %}
+               {% bootstrap_form form %}
+               <button class="btn btn-primary">Guardar</button>
+            </form>
+         </div>
       </div>
    </div>
