--- a/ventapp/templates/widgets/dbs/curvaDiseno.html
+++ b/ventapp/templates/widgets/dbs/curvaDiseno.html
@@ -1,3 +1,4 @@
+{% load django_bootstrap5 %}
    <div class="row">
       <div class="col">
          <a href="?type=ventilador" class="btn btn-outline-secondary">+ Ventilador</a>
@@ -9,6 +10,33 @@
 
    <div class="row h-100">
       <div class="col m-4">
-         <div class="h-100" id="graphContainer" data-scatter-data="{{ scatter_data|safe }}"></div>
+         <div class="h-100" >
+            <h2>Nueva Curva Diseño</h2>
+            <form method="POST">
+               {% csrf_token %}
+               {% bootstrap_form form %}
+               <div class="d-flex justify-content-between">
+                  <label for="cau">Caudal (m3/s)</label>
+                  <label for="cau">Presion Total (pa)</label>
+                  <label for="cau">Power (kW)</label>
+               </div>
+               <div class="d-flex justify-content-between">
+                  <input type="number" class="span5">
+                  <input type="number" class="span5">
+                  <input type="number" class="span5">
+               </div>
+               <div class="d-flex justify-content-between">
+                  <input type="number" class="span5">
+                  <input type="number" class="span5">
+                  <input type="number" class="span5">
+               </div>
+               <div class="d-flex justify-content-between">
+                  <input type="number" class="span5">
+                  <input type="number" class="span5">
+                  <input type="number" class="span5">
+               </div>
+               <button class="btn btn-primary">Guardar</button>
+            </form>
+         </div>
       </div>
    </div>
