--- a/ventapp/templates/widgets/dbs/equipDiesel.html
+++ b/ventapp/templates/widgets/dbs/equipDiesel.html
@@ -24,7 +24,15 @@
    <script>
       const qr_calculado = document.getElementById('id_qr_calculado');
       const potencia = document.getElementById('id_potencia');
+      const qr_fabricante = document.getElementById('id_qr_fabricante');
       function Funcion(){
          qr_calculado.value = (potencia.value*2.83)/(60*0.746);
+      }
+      function Funcion2(){
+         if(qr_fabricante.value == ""){
+            Funcion()
+         }else{
+            qr_calculado.value = qr_fabricante.value;
+         };
       }
    </script>
